# codemarks

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: coverage-grcov.sh  coverage-llvm.sh  coverage.sh
src/: ci.rs  clean.rs  config.rs  list.rs  main.rs  scan.rs  watch.rs
src/ci/: mod.rs  tests.rs
src/clean/: mod.rs  tests.rs
src/config/: mod.rs  tests.rs
src/list/: mod.rs  tests.rs
src/project_detection/: mod.rs  tests.rs
src/scan/: mod.rs  tests.rs
src/watch/: mod.rs  tests.rs
tests/: integration_tests.rs
